<resources>
    <string name="app_name">ContentProviderPg</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="file_saved_success">File saved successfully</string>
    <string name="external_storage_error">External storage is not available</string>
    <string name="error_writing_to_file">Error writing to file</string>
    <string name="duplicate_eventline_name">Event line with that name already exists</string>
    <string name="duplicate_eventline_name_error_msg">Line with that name already exists</string>
    <string name="aggregate_daily_check">Aggregate on Daily Basis</string>
    <string name="tap_to_add">Tap the Button to add an Event Line</string>
    <string name="basic_line_type">Basic</string>
    <string name="integer_line_type">Number</string>
    <string name="comment_line_type">Comment</string>
    <string name="empty_event_line_name">Line name must not be empty</string>
    <string name="no_data_to_show">No data to show</string>
</resources>
